--- a/index.html
+++ b/index.html
@@ -42,12 +42,20 @@
             </div>
         </div>
         <div class = "viz-container">
-            <div class = "row">
+            <div class = "row gender">
+                <div class = "line-chart"></div>
+                <div class = "pie-chart"></div>
+            </div>
+            <div class = "row ethnicity">
+                <div class = "bar-chart"></div>
+                <div class = "pie-chart"></div>
+            </div>            
+            <div class = "row geo">
                 <div class = "top-5"></div>
                 <div class = "map"></div>
                 <div class = "line-chart"></div>
             </div>
-            <div class= "row">
+            <div class= "row enrollment">
                 <div class = "bar-chart"></div>
                 <div class = "area-chart"></div>
             </div>
@@ -57,6 +65,8 @@
     <div id="bar-tooltip" class="hidden">
     <div id="line-tooltip" class="hidden">
     <div id="area-tooltip" class="hidden">
+    <div id="pie-tooltip" class="hidden">
+    <div id="top-five-tooltip" class="hidden">
 
 </body>
 </html>
