--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
             </h1>
         </div>        
         <div class = "viz-container">
+            <h3>How has the gender distribution of students overall changed over time?</h3>
+                <div class="user-control">
+        <select id="attraction-category" class="form-control">
+          <option value="Line Chart">Line Chart</option>
+          <option value="Stacked Bar Chart">Stacked Bar Chart</option>
+        </select>
+      </div>
             <div class = "row gender">
                 <div class = "line-chart"></div>
+            <h3>What is the gender distribution within each school at BC?</h3> 
                 <div class = "pie-chart"></div>
             </div>
             <h3>How has the distribution of ethnicities changed over time? How does this compare to the ethnic distribution of the country overall?</h3>
