--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.1.1/d3.min.js"></script>
     <script src="https://unpkg.com/topojson@3"></script>
     <script defer src="main.js" defer type="module"></script>
-
+    <script defer src="LineChart.js" defer type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.1"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.18.2"></script>
@@ -29,11 +29,12 @@
         </div>        
         <div class = "viz-container">
             <h3>How has the gender distribution of students overall changed over time?</h3>
+                     <div class = "line-chart"></div>
                 <div class="user-control">
         </select>
       </div>
             <div class = "row gender">
-                <div class = "line-chart"></div>
+ 
             <h3>What is the gender distribution within each school at BC?</h3> 
                 <div class = "pie-chart"></div>
             </div>
