--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
                     <div id = "dot-plot"></div>
                 </div>
             </div>     
+            <h3>What is the gender distribution of each school over time?</h3>
+            <div class = "row gender school">
+                <select id = "school-select" class = "form-control">
+                    <option value = "all">All</option>
+                    <option value = "mcas">MCAS</option>
+                    <option value = "lynch">Lynch School</option>
+                    <option value = "csom">CSOM</option>
+                    <option value = "nursing">Nursing School</option>
+                    <option value = "woods">Woods School</option>
+                </select>
+            </div>
+            <div class = "pie-chart">
+                <div id = "school-pie-chart"></div>
+            </div>
             <h3>How has the geographic distribution of students at BC changed over time?</h3>
             <div class = "row map">
                 <div class = "column">
