--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             <div class = "pie-chart">
                 <div id = "school-pie-chart"></div>
             </div>
-            <h5> sample text</h5>
+            <h5>In this Visualization we can see gender trends throughout different schools at BC, as well as for the BC population as a whole. Since the 1980’s, The total undergraduate body has shifted slightly closer a 50/50 split of males to females but there has consistently been more females. MCAS, the school of arts and sciences very closely mirrors the trends of the overall student body. The Lynch School of Education and human development is predominantly female, though there has been an increase of male representation since the 1980’s. The nursing school shows a similar trend as LSOE, however the ratio is even more skewed towards females, except in 2000 where there was a considerable increase in male representation. The business school has become less diverse overtime. Though it has been consistently male dominated since the 80’s, this trend has become consistently more pronounced since 1985. </h5>  
+
             <h3>How has the geographic distribution of students at BC changed over time?</h3>
             <div class = "row map">
                 <div class = "column">
@@ -74,7 +75,7 @@
                     <div class = "map-2020"></div>
                 </div>
             </div>
-            <h5> sample text</h5>
+            <h5> The geographical diversity of BC from different parts of the country has increased since since the 70’s. The US has increasingly brought in students from places outside of the northeast since the 70s. This change is particularly noticeable for states such as California, Texas, Florida, Minnesota, and Washington. However, there are still areas of the country that are underrepresented such as midwest states outside of the Great Lakes region and Southern States, excluding Texas and Florida.</h5>  
             <div class = "single-container">
                 <h3>How has the number of international students changed over time?</h3>
                 <div id = "intl-line-chart"></div>
