--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             <div class = "single-container">
                 <h3>How has the number of international students changed over time?</h3>
                 <div id = "intl-line-chart"></div>
-                <h5> sample text</h5>
+                <h5> The number of international students at BC has increased considerably since 1976. The increase been particularly strong since 2010. This increase in international students has the potential have a positive impact on the overall diversity of BC, as well as the diversity of thought due to the influence of differing backgrounds and experiences. </h5>  
+
             </div>
             <h3>How Do BC's Demographics Compare to Peer Institutions?</h3>
             <div class = "row">
