--- a/index.html
+++ b/index.html
@@ -91,7 +91,14 @@
                     <div id = "stacked-bar2"></div>
                 </div>
         </div>
-        <h5> sample text</h5>
+        <div class = "row">
+            <div class = "column">
+                <h5> The gender distribution across all of the institutions examined are similar with females being represented at higher rates than males, except for at Notre Dame. This difference is most pronounced at BU and Georgetown and is the least pronounced at Northeastern and Notre Dame. BC falls between these two groups.</h5>  
+            </div>
+            <div class = "column">
+                <h5> sample text</h5>
+            </div>
+    </div>
     </div>
     <div id ="map-tooltip" class = "hidden tooltip"></div>
     <div id = "state-line-tooltip" class = "hidden tooltip"></div>
