--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                 <h5> The gender distribution across all of the institutions examined are similar with females being represented at higher rates than males, except for at Notre Dame. This difference is most pronounced at BU and Georgetown and is the least pronounced at Northeastern and Notre Dame. BC falls between these two groups.</h5>  
             </div>
             <div class = "column">
-                <h5> sample text</h5>
+                <h5> The representation of different ethnicities varies among BC and their peer universities. The final column shows the ethnic breakdown for the US as a whole which can be compared with the universities to see which are most representative. All of the universities except for Notre Dame significantly overrepresent Asian students. All of the universities, including BC underrepresent Black and Hispanic students. White students are over represented at BC and Notre Dame. Overall, Northeastern and BU have the most representation of minority students and BC and Notre Dame have the least minority representation. </h5>  
+
             </div>
     </div>
     </div>
