--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <button id="button" class = "button">Update Chart Type</button>
                 <div class = "line-chart"></div>
                 <p><i><strong>TO BE ADDED: Click the button to transition to a stacked bar chart showing the percentage of male/female students in each year</strong></i></p>
+                <h5>In this visualization we can see that there has consistently been a higher number of female students enrolled in Boston College than male students over the past 45 years.  The difference was the most pronounced from around 1980-1990, when it then began to narrow until 2010.  The difference appears to be widening once again beginning from 2010 until today.</h5>
             </div>      
         </div>         
         <div class = "viz-container">
@@ -53,8 +54,6 @@
             <h5>In these visualizations we can see gender trends throughout different schools at BC, as well as for the BC population as a whole. Since the 1980’s, The total undergraduate body has shifted slightly closer a 50/50 split of males to females but there has consistently been more females. MCAS, the school of arts and sciences very closely mirrors the trends of the overall student body. The Lynch School of Education and human development is predominantly female, though there has been an increase of male representation since the 1980’s. The nursing school shows a similar trend as LSOE, however the ratio is even more skewed towards females, except in 2000 where there was a considerable increase in male representation. The business school has become less diverse overtime. Though it has been consistently male dominated since the 80’s, this trend has become consistently more pronounced since 1985. </h5>  
         </div>
         <div class = "viz-container">
-            <h5>In these visualizations we can see gender trends throughout different schools at BC, as well as for the BC population as a whole. Since the 1980’s, The total undergraduate body has shifted slightly closer a 50/50 split of males to females but there has consistently been more females. MCAS, the school of arts and sciences very closely mirrors the trends of the overall student body. The Lynch School of Education and human development is predominantly female, though there has been an increase of male representation since the 1980’s. The nursing school shows a similar trend as LSOE, however the ratio is even more skewed towards females, except in 2000 where there was a considerable increase in male representation. The business school has become less diverse overtime. Though it has been consistently male dominated since the 80’s, this trend has become consistently more pronounced since 1985. </h5>  
-
             <h3>How has the geographic distribution of students at BC changed over time?</h3>
             <div class = "row map">
                 <div class = "column">
