--- a/index.html
+++ b/index.html
@@ -28,22 +28,34 @@
         </div>
         <div class = "viz-container">
             <h3>Changes in Gender Distribution</h3>
-            <div id="chartContainer">
-                <button id="button" class = "button">Update Chart Type</button>
-                <div class = "line-chart"></div>
-                <p><i><strong>TO BE ADDED: Click the button to transition to a stacked bar chart showing the percentage of male/female students in each year</strong></i></p>
-                <h5>In this visualization we can see that there has consistently been a higher number of female students enrolled in Boston College than male students over the past 45 years.  The difference was the most pronounced from around 1980-1990, when it then began to narrow until 2010.  The difference appears to be widening once again beginning from 2010 until today.</h5>
-            </div>      
-        </div>    
+            <h5>The overall number of students enrolled in Boston College has been variable throughout the last 45 years, starting at a total of 9,899 in 1976 and increasing to a total of 10,767 enrolled students in 1980 before showing a generally decreasing trend down to a total of 9,445 enrolled students in the Fall of 2020. The university first went co-ed in 1970, with the first fully coeducational class graduating in the Spring of 1974. Throughout the past 45 years, the number of male and female students has varied alongside the total number of enrolled students.</h5>
+            <div class = "row gender">
+                <div class = "column">
+                    <div id="chartContainer">
+                        <button id="button" class = "button">Update Chart Type</button>
+                        <div class = "line-chart"></div>
+                    </div>
+                </div>
+                <div class = "column">
+                    <h5><br><br><br>We see that the number of female students enrolled in Boston College has consistently been greater than the number of male students over the past 45 years.  The difference was the most pronounced between 1980 and 1990, which interestingly corresponds very closely to the higher total number of students enrolled in those years.  Thus, it seems that in these years of higher enrollment, the majority of the additional enrolled students were female rather than male. Since then, the gap between the number of male and female students narrowed to a nearly constant difference until 2010, since when it has begun to widen once again.</h5>
+                </div>
+            </div>
+            <h5>Despite the differences in the number of students of each gender over time, the percent of students of each gender has stayed reasonably constant at about 47-48% male. However, in the years where the difference in number between the two sexes were the highest (1980-1990), the percent gap widened slightly to an average of about 43% male.</h5>
+        </div>
         <div class = "viz-container">
+            <h5><br>Thus, the overall gender trends of the Boston College population as a whole has been majority-female. Where we begin to see more of a difference in male-female representation is in the different individual schools within BC.</h5>
+            <p><i>Note: Boston College did not begin publishing the gender breakdown of students enrolled in each school until the year 1985.</i></p>
             <p><strong>Gender Distribution within Each of BC's Different Schools</strong></p>
             <div class = "pie-chart">
                 <div id = "school-pie-chart"></div>
             </div>
-            <h5>In these visualizations we can see gender trends throughout different schools at BC, as well as for the BC population as a whole. Since the 1980’s, The total undergraduate body has shifted slightly closer a 50/50 split of males to females but there has consistently been more females. MCAS, the school of arts and sciences very closely mirrors the trends of the overall student body. The Lynch School of Education and human development is predominantly female, though there has been an increase of male representation since the 1980’s. The nursing school shows a similar trend as LSOE, however the ratio is even more skewed towards females, except in 2000 where there was a considerable increase in male representation. The business school has become less diverse overtime. Though it has been consistently male dominated since the 80’s, this trend has become consistently more pronounced since 1985. </h5>  
+            <h5>The Morrissey College of Arts & Sciences, BC's largest school, has reflected these trends the most closely.  Where we begin to see larger divides are the schools aimed towards fields which are traditionally dominated more by a single gender. Both the Lynch School of Education and Connell School of Nursing have been consistently female-dominated since 1976 by large, relatively consistent margins. Interestingly, there was a considerable increase in male representation in the Nursing school in the year 2000, which was immediately decreased down to the normal levels by 2005.</h5>
+            <h5>On the other hand, the Carroll School of Management has consistantly been male-dominated since 1985, showing a clear departure from the overall tendency of the school to being majority female. The majority-male makeup of this school has actually become more pronounced over time, increasing from being 53% male in 1985 to 67% male in 2020. Given the overall increase in women in business across the world in the same time period, this trend is especially surprising.</h5>
+            <h5>The Woods College of Advancing Studies has shown the most drastic change in gender demographics since 1985. While the school initially showed a female majority in 1985, the distribution has steadily changed to being majority-male as of 2020.</h5>
         </div>
         <div class = "viz-container">
             <h3>Changes in Ethnic Distribution</h3>
+            <h5>We next turn to an analysis of the ethnic distribution of students enrolled in Boston College since 1976. In contrast to the more consistent gender patterns of BC, BC has generally become a more ethnically diverse school in the past 45 years, yet the change has been slow.</h5>
             <div class = "row ethnicity">
                 <div class = "column">
                     <p><br></p>
@@ -54,26 +66,28 @@
                     <div id = "two-more-bar"></div>
                 </div>
             </div>  
-            <h5>From the graph on the left, you can see BC has become more diverse overtime, though the change has been slow.</h5>
+            <h5>Boston College has been, and continues to be, a majority-White school, though the White majority has decreased steadily throughout the years. Notably, the Asian population of the school has steadily increased in the past 45 years, while the Native American population has been consistently low. The Hispanic and Black populations have been reasonably variable throughout the years, showing no consistent pattern of growth. Furthermore, BC introduced a new "two or more races" category into its statistics in 2010. A high number of those identifying as two or more races identified either Hispanic or White as one them, which could possibly skew some of the patterns seen in the distribution of these ethnicities.</h5>
+            <h5>To gain further insight into these ethnic distributions, we wanted to see how the distributions of BC compared to those of the United States overall.</h5>
             <div class = "row us-compare">
                 <div class = "column">
                     <p><i>Adjust the year slider below to begin!</i></p>
                     <div id = "dot-plot"></div>
                 </div>
                 <div class = "column">
-                    <h5>The undergrad population is considerably and consistently more white than the US population. Over the past 30 years, BC has also had a growing Asian population, that has grown at a faster rate at BC than it has in the US overall. Conversely, Hispanic and Black Students have been consistently underrepresented at BC and from these visualizations it is evident that this problem has not decreased. </h5>
+                    <h5><br><br><br>The undergrad population of BC is considerably and consistently more white than the US population, and has been for the duration of the past 45 years. Additionally, the Asian population of BC has been increasingly over-represented within the BC community compared with the US overall to an approximately 100% difference in 2020. The Black and Hispanic populations have been consistently under-represented at BC by reasonably consistent margins, and it is evident that this problem has shown no signs of decreasing.</h5>
                 </div>
             </div>
          </div>     
         <div class = "viz-container">
             <h3>Changes in Geographic Distribution</h3>
+            <h5>As we have seen, despite the gender breakdown remaining constant, the ethnic diversity of enrolled students shows signs of increasing. It seems that, in accordance with the increase in ethnic diversity, the geographic distribution of students has been increasing as well.</h5>
             <div class = "row map">
                 <div class = "column">
                     <p><strong>Number of Students from Each State in 1976</strong></p>
                     <div class = "map-1976"></div>
                 </div>
                 <div class = "column">
-                    <p><i>Click on a state on either map to learn more!</i></p>
+                    <p><i>Click on a state or zoom in for more detail!</i></p>
                     <p id = "state-name">Alabama</p>
                     <p id = "state-info">
                         1976: 2<br>
@@ -93,40 +107,37 @@
                     <div class = "map-2020"></div>
                 </div>
             </div>
-            <h5> The geographical diversity of BC from different parts of the country has increased since since the 70’s. The US has increasingly brought in students from places outside of the northeast since the 70s. This change is particularly noticeable for states such as California, Texas, Florida, Minnesota, and Washington. However, there are still areas of the country that are underrepresented such as midwest states outside of the Great Lakes region and Southern States, excluding Texas and Florida.</h5>  
+            <h5>In 1976, the geographic distribution of students was fairly limited. The vast majority of students came from the Northeast, with more than 70% of the student body coming from either Massachusetts, New York, New Jersey, or Connecticut. In contrast, the vast majority of the country was severely under-represented, with Illinois and Ohio being the only two states outside of the Northeast with greater than 100 students. In 2020, however, we can see that this pattern has begun to change. While the majority of students still seem to come from the Northeast (New York and Massachusetts continue to stand out), the overall distribution has become much more even. The change is particularly noticeable for states such as California, Texas, Florida, Minnesota, and Washington. However, there are still areas of the country which are under-represented, such as Midwest states outside of the Great Lakes region and the majority of Southern States.</h5>
         </div>
         <div class = "viz-container">
             <div class = "row international">
                 <div class = "column">
-                    <h5> The number of international students at BC has increased considerably since 1976. The increase been particularly strong since 2010. This increase in international students has the potential have a positive impact on the overall diversity of BC, as well as the diversity of thought due to the influence of differing backgrounds and experiences. </h5>  
+                    <h5><br><br><br><br>In addition to the increase in diversity in terms of geographic distribution of US-born students, the percent of international students at BC has increased considerably since 1976.</h5>  
                 </div>
                 <div class = "column">
                     <div id = "intl-line-chart"></div>
                 </div>
             </div>
+            <h5>The importance of the increase in geographic distribution of the student body of BC lies in its impacts on the diversity of the school. As we have seen that the student body has become more ethnically diverse, diversity in geographic background provides an increase in diversity of thought in the student population as well.  Having come from all across the world, Boston College students will have had incresingly different life experiences prior to coming to BC. This increase has the ability to make an incredibly positive impact on the student experience at BC, allowing for people to come together and share their own experiences while learning those of others to create a more stimulating academic environment.</h5>
         </div>
         <h3>How Do BC's Demographics Compare to Peer Institutions?</h3>
+        <h5>While Boston College has clearly become more a more ethnically and geographically diverse school over time, it is valuable to examine how its current gender and ethnic distributions compare to those of several peer institutions. We chose to focus specifically on Boston University (BU), Georgetown, Notre Dame, and Northeastern.</h5>
         <div class = "viz-container">
-            <div class = "row other-gender">
+            <div class = "row comparison">
                 <div class = "column">
                     <div id = "stacked-bar"></div>
+                    <h5><br><br><br>Each of the schools that we looked at (and the United States in general) were also majority-White, though BU, Georgetown and Northeastern are to a lesser extent. Notre Dame actually had a more prominent White majority than any other school, and was significantly less represented in the Asian population than the others. In general, the Asian population was over-represented across all schools in comparison to the US, while the Hispanic population seems to be generally on-par with that of the US. However, both the Black and Native American populations are under-represented at all schools compared to US totals, with the Native American populations being nearly non-existent at each university.</h5>  
                 </div>
                 <div class = "column">
-                    <h5>The gender distribution across all of the institutions examined are similar with females being represented at higher rates than males, except for at Notre Dame. This difference is most pronounced at BU and Georgetown and is the least pronounced at Northeastern and Notre Dame. BC falls between these two groups.</h5>  
-                </div>
-            </div>
-            <div class = "row other-ethnicity">
-                <div class = "column">
-                    <h5> The representation of different ethnicities varies among BC and their peer universities. The final column shows the ethnic breakdown for the US as a whole which can be compared with the universities to see which are most representative. All of the universities except for Notre Dame significantly overrepresent Asian students. All of the universities, including BC underrepresent Black and Hispanic students. White students are over represented at BC and Notre Dame. Overall, Northeastern and BU have the most representation of minority students and BC and Notre Dame have the least minority representation. </h5>  
-                </div>
-                <div class = "column">
+                    <h5><br><br><br>Almost all of the peer institutions that we examined shared BC's majority-female demographics, with both BU and Georetown having an even higher female majority. The only peer institution which is majority male in 2020 is Notre Dame, while Northeastern is the closest to being truly 50-50 in terms of gender.</h5>  
                     <div id = "stacked-bar2"></div>
                 </div>
             </div>
         </div>
+        <div class = "viz-container">
+            <h3>Conclusion</h3>
+        </div>
     </div>
-    <script>
-    </script>
     <div id ="map-tooltip" class = "hidden tooltip"></div>
     <div id="bar-tooltip" class="hidden tooltip"></div>
     <div id="line-tooltip" class="hidden tooltip"></div>
