--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
             <h5>We next turn to an analysis of the ethnic distribution of students enrolled in Boston College since 1976. In contrast to the more consistent gender patterns of BC, BC has generally become a more ethnically diverse school in the past 45 years, yet the change has been slow.</h5>
             <div class = "row ethnicity">
                 <div id = "stacked-area"></div>
-                <h5>Boston College has been, and continues to be, a majority-White school, though the White majority has decreased steadily throughout the years. Notably, the Asian population of the school has steadily increased in the past 45 years, while the Native American population has been consistently low. The Hispanic and Black populations have been reasonably variable throughout the years, showing no consistent pattern of growth.</h5>
+                <h5>Boston College has been, and continues to be, a majority-White school, though the White majority has decreased 
+                    steadily throughout the years. Notably, the Asian population of the school has steadily increased in the past 
+                    45 years, while the Native American population has been consistently low. The Hispanic and Black populations 
+                    have been reasonably variable throughout the years, showing no consistent pattern of growth. The two or more
+                    races category refers to students who identify with more than one race or ethnicity.</h5>
             </div>
             <div class = "row twomore">
                 <div class = "column">
@@ -77,7 +81,7 @@
                     <div id = "dot-plot"></div>
                 </div>
                 <div class = "column">
-                    <h5><br><br><br>The undergrad population of BC is considerably and consistently more white than the US population, and has been for the duration of the past 45 years. Additionally, the Asian population of BC has been increasingly over-represented within the BC community compared with the US overall to an approximately 100% difference in 2020. The Black and Hispanic populations have been consistently under-represented at BC by reasonably consistent margins, and it is evident that this problem has shown no signs of decreasing.</h5>
+                    <h5><br><br><br>The undergrad population of BC is considerably and consistently more white than the USA population, and has been for the duration of the past 45 years. Additionally, the Asian population of BC has been increasingly over-represented within the BC community compared with the USA overall to an approximately 100% difference in 2020. The Black and Hispanic populations have been consistently under-represented at BC by reasonably consistent margins, and it is evident that this problem has shown no signs of decreasing.</h5>
                 </div>
             </div>
          </div>     
@@ -129,7 +133,7 @@
             <div class = "row comparison">
                 <div class = "column">
                     <div id = "stacked-bar"></div>
-                    <h5><br><br><br>Each of the schools that we looked at (and the United States in general) were also majority-White, though BU, Georgetown and Northeastern are to a lesser extent. Notre Dame actually had a more prominent White majority than any other school, and was significantly less represented in the Asian population than the others. In general, the Asian population was over-represented across all schools in comparison to the US, while the Hispanic population seems to be generally on-par with that of the US. However, both the Black and Native American populations are under-represented at all schools compared to US totals, with the Native American populations being nearly non-existent at each university.</h5>  
+                    <h5><br><br><br>Each of the schools that we looked at (and the United States in general) were also majority-White, though BU, Georgetown and Northeastern are to a lesser extent. Notre Dame actually had a more prominent White majority than any other school, and was significantly less represented in the Asian population than the others. In general, the Asian population was over-represented across all schools in comparison to the US, while the Hispanic population seems to be generally on-par with that of the US. However, both the Black and Native American populations are under-represented at all schools compared to USA totals, with the Native American populations being nearly non-existent at each university.</h5>  
                 </div>
                 <div class = "column">
                     <h5><br><br><br>Almost all of the peer institutions that we examined shared BC's majority-female demographics, with both BU and Georetown having an even higher female majority. The only peer institution which is majority male in 2020 is Notre Dame, while Northeastern is the closest to being truly 50-50 in terms of gender.</h5>  
@@ -139,6 +143,17 @@
         </div>
         <div class = "viz-container">
             <h3>Conclusion</h3>
+            <h5>
+                BC has consistently become more diverse in the gender, ethnic and international student distribution since 1975, 
+                though not by a huge margin. The gender distribution has evened out with a decreasing proportion of females and 
+                an increasing proportion of men. The percentage of white students has slowly decreased from 94% to 65% with a 
+                large increase in Asian students and a small increase of Black, Hispanic and multicultural students. International 
+                students have made a large impact in BC’s diversity with an increase from 1.09% to 7.7% of the student body. In 
+                comparison with other private and neighboring universities, BC has similar gender distributions and a 
+                similar ethnic makeup, though BU and Northeastern reach higher levels of diversity by a small margin. 
+                BC has consistently become more diverse since 1975 but still has plenty of room to grow 
+                to match and exceed neighboring universities like BU and Northeastern.
+            </h5>
         </div>
     </div>
     <div id ="map-tooltip" class = "hidden tooltip"></div>
